<resources>

    <!--  GENERAL  -->
    <string name="app_name">rockpaperscissorsNEW</string>
    <string name="app_name_custom">Камень ножницы бумага онлайн</string>
    <string name="app_in_market" translatable="false">https://play.google.com/store/apps/details?id=com.stenleone.rockpaperscissors</string>
    <string name="time_format_main">EEE MMM dd HH:mm:ss zzzz yyyy</string>
    <string name="ok">Ok</string>

    <!--  LOGIN  -->
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="login_button">Ввойти или зарегестрироватся</string>
    <string name="pass_length_error">Пароль должен иметь более 6 символов</string>
    <string name="email_format_error">Почти должна быть в формате aaa@example.com</string>

    <!--  MAIN  -->
    <string name="profile">Профиль</string>
    <string name="share_app">Поделится приложением</string>
    <string name="rate_app">Оценить приложение</string>
    <string name="support_dev">Поддержать разработчика</string>
    <string name="log_out">Выйти из аккаунта</string>
    <string name="share_via">Поделиться приложением в</string>

    <!--  PROFILE  -->
    <string name="name">Имя</string>
    <string name="save">Сохранить</string>
    <string name="win">Побед:</string>
    <string name="lose">Поражений:</string>
    <string name="profile_update_success">Ваш профиль успешно обновлён!</string>

    <!--  GAME CHOSER  -->
    <string name="create">Создать</string>
    <string name="join">Присоеденится</string>

    <!--  Game Creator  -->
    <string name="create_room">Создание комнаты</string>
    <string name="name_room">Имя комнаты</string>
    <string name="save_by_password">Защитить паролем</string>
    <string name="player_count">Количество игроков</string>
    <string name="game_count">Раунд</string>
    <string name="online">По сети</string>
    <string name="offline">С компютером</string>
    <string name="edit_text_must_not_empty">Поле не должно быть пустым</string>
    <string name="choise_game_parameters">Выберите режим игры (\"%s\" или \"%s\")</string>

    <!--  Game Play  -->
    <string name="round_text">Раунд %s/%s</string>

    <!--  Find Room  -->
    <string name="find_room">Поиск игровой комнаты</string>
    <string name="room_connected_failed">Не удалось присоеденится</string>
    <string name="room_no_actual_player_count">В комнате \"%s\" нет свободных мест.</string>
    <string name="room_long_time_create">Эта комната была создана более часа назад, возможно игроки уже покинули её</string>
    <string name="advice">Совет</string>
    <string name="room_defendended_by_pass">Комната \"%s\" защищена паролем</string>
    <string name="log_in">Ввойти</string>

    <!--  Errors  -->
    <string name="connection_title">Проблема с интернет соединением</string>
    <string name="connection_text">Отсутствует интернет соединение!</string>
    <string name="retry">Повторить</string>
    <string name="unknown_error">Неизвестная ошибка</string>

</resources>