<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.stenleone.rockpaperscissors.ui.fragments.profile.ProfileViewModel" />

        <variable
            name="user"
            type="com.stenleone.rockpaperscissors.model.network.User" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/alto">

        <soup.neumorphism.NeumorphCardView
            android:id="@+id/rootLay"
            style="@style/neumorphism"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:neumorph_shapeType="pressed" />

        <soup.neumorphism.NeumorphCardView
            android:id="@+id/imageCard"
            style="@style/neumorphism"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:neumorph_shapeType="flat">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:load_image="@{user.image}" />

        </soup.neumorphism.NeumorphCardView>

        <soup.neumorphism.NeumorphCardView
            android:id="@+id/cardLay"
            style="@style/CustomShapeAppearanceRounded"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintBottom_toTopOf="@+id/saveButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backButton"
            app:neumorph_shapeType="flat">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <soup.neumorphism.NeumorphCardView
                    android:id="@+id/email"
                    style="@style/neumorphism"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintBottom_toTopOf="@+id/login"
                    app:layout_constraintEnd_toEndOf="@+id/cardLay"
                    app:layout_constraintStart_toStartOf="@+id/cardLay"
                    app:layout_constraintTop_toTopOf="@+id/cardLay"
                    app:neumorph_shapeType="pressed">

                    <TextView
                        android:id="@+id/emailEdit"
                        style="@style/TextViewStandard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:padding="5dp"
                        android:text="@{user.email}" />

                </soup.neumorphism.NeumorphCardView>

                <soup.neumorphism.NeumorphCardView
                    android:id="@+id/name"
                    style="@style/neumorphism"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintBottom_toBottomOf="@+id/cardLay"
                    app:layout_constraintEnd_toEndOf="@+id/cardLay"
                    app:layout_constraintStart_toStartOf="@+id/cardLay"
                    app:layout_constraintTop_toBottomOf="@+id/email"
                    app:neumorph_shapeType="pressed">

                    <EditText
                        android:id="@+id/nameEdit"
                        style="@style/EditTextDefault"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:text="@={viewModel.name}" />

                </soup.neumorphism.NeumorphCardView>

                <soup.neumorphism.NeumorphCardView
                    android:id="@+id/win"
                    style="@style/neumorphism"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintBottom_toBottomOf="@+id/cardLay"
                    app:layout_constraintEnd_toEndOf="@+id/cardLay"
                    app:layout_constraintStart_toStartOf="@+id/cardLay"
                    app:layout_constraintTop_toBottomOf="@+id/email"
                    app:neumorph_shapeType="pressed">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/TextViewStandard"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:inputType="textEmailAddress"
                            android:padding="5dp"
                            android:text="@string/win" />

                        <TextView
                            style="@style/TextViewStandard"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:hint="0"
                            android:inputType="textEmailAddress"
                            android:padding="5dp"
                            android:text="@{String.valueOf(user.win)}" />

                    </LinearLayout>
                </soup.neumorphism.NeumorphCardView>

                <soup.neumorphism.NeumorphCardView
                    android:id="@+id/lose"
                    style="@style/neumorphism"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintBottom_toBottomOf="@+id/cardLay"
                    app:layout_constraintEnd_toEndOf="@+id/cardLay"
                    app:layout_constraintStart_toStartOf="@+id/cardLay"
                    app:layout_constraintTop_toBottomOf="@+id/email"
                    app:neumorph_shapeType="pressed">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/TextViewStandard"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:inputType="textEmailAddress"
                            android:padding="5dp"
                            android:text="@string/lose" />

                        <TextView
                            style="@style/TextViewStandard"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:hint="0"
                            android:inputType="textEmailAddress"
                            android:padding="5dp"
                            android:text="@{String.valueOf(user.lose)}" />

                    </LinearLayout>
                </soup.neumorphism.NeumorphCardView>

            </LinearLayout>
        </soup.neumorphism.NeumorphCardView>

        <soup.neumorphism.NeumorphCardView
            android:id="@+id/saveButton"
            style="@style/CustomShapeAppearanceRounded"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="@+id/rootLay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:neumorph_shapeType="flat">

            <TextView
                style="@style/TextViewStandard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/save" />

        </soup.neumorphism.NeumorphCardView>

        <soup.neumorphism.NeumorphCardView
            android:id="@+id/backButton"
            style="@style/CustomShapeAppearanceRounded"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:neumorph_shapeType="flat">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_back" />

        </soup.neumorphism.NeumorphCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>